--- a/Sionna_vishnu_1.ipynb
+++ b/Sionna_vishnu_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Sionna-vishnu-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNrGMKDza81PvWtHeODSlI",
+      "authorship_tag": "ABX9TyN01q1fvmWNjz5ZU6isDgS4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This notebook is \n",
-        "(c) vishnu.n@ieee.org.  \n",
         "12 Apr 2022.  \n",
-        "Created for student engagement project [FGAN-I-230](https://extranet.itu.int/sites/itu-t/focusgroups/an/input/FGAN-I-230.zip).      \n",
-        "Free to use as long as cited as above."
+        "Created for student engagement project [FGAN-I-230](https://extranet.itu.int/sites/itu-t/focusgroups/an/input/FGAN-I-230.zip).  *italicized text*    \n",
+        "Free to use as long as cited as above.\n",
+        "For educational purpose only."
       ],
       "metadata": {
         "id": "k8L2n4fGd7vO"
