--- a/build_a_thon_graph_v1.ipynb
+++ b/build_a_thon_graph_v1.ipynb
@@ -6,7 +6,7 @@
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCvHIo9m7UCCug0P3JuC4s",
+      "authorship_tag": "ABX9TyMx87HldW/lE1ciCYT4N3rH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,27 +136,27 @@
         "        # Don't forget to close the driver connection when you are finished with it\n",
         "        self.driver.close()\n",
         "\n",
-        "    def create_friendship(self, person1_name, person2_name):\n",
+        "    def create_friendship(self, actor1_name, actor2_name):\n",
         "        with self.driver.session() as session:\n",
         "            # Write transactions allow the driver to handle retries and transient errors\n",
         "            result = session.write_transaction(\n",
-        "                self._create_and_return_friendship, person1_name, person2_name)\n",
+        "                self._create_and_return_friendship, actor1_name, actor2_name)\n",
         "            for row in result:\n",
-        "                print(\"Created friendship between: {p1}, {p2}\".format(p1=row['p1'], p2=row['p2']))\n",
+        "                print(\"Created friendship between: {n1}, {n2}\".format(n1=row['n1'], n2=row['n2']))\n",
         "\n",
         "    @staticmethod\n",
-        "    def _create_and_return_friendship(tx, person1_name, person2_name):\n",
+        "    def _create_and_return_friendship(tx, actor1_name, actor2_name):\n",
         "        # To learn more about the Cypher syntax, see https://neo4j.com/docs/cypher-manual/current/\n",
         "        # The Reference Card is also a good resource for keywords https://neo4j.com/docs/cypher-refcard/current/\n",
         "        query = (\n",
-        "            \"CREATE (p1:Person { name: $person1_name }) \"\n",
-        "            \"CREATE (p2:Person { name: $person2_name }) \"\n",
-        "            \"CREATE (p1)-[:KNOWS]->(p2) \"\n",
-        "            \"RETURN p1, p2\"\n",
+        "            \"CREATE (n1:Actor { name: $actor1_name }) \"\n",
+        "            \"CREATE (n2:Actor { name: $actor2_name }) \"\n",
+        "            \"CREATE (n1)-[:USECAP]->(n2) \"\n",
+        "            \"RETURN n1, n2\"\n",
         "        )\n",
-        "        result = tx.run(query, person1_name=person1_name, person2_name=person2_name)\n",
+        "        result = tx.run(query, actor1_name=actor1_name, actor2_name=actor2_name)\n",
         "        try:\n",
-        "            return [{\"p1\": row[\"p1\"][\"name\"], \"p2\": row[\"p2\"][\"name\"]}\n",
+        "            return [{\"n1\": row[\"n1\"][\"name\"], \"n2\": row[\"n2\"][\"name\"]}\n",
         "                    for row in result]\n",
         "        # Capture any errors along with the query and data for traceability\n",
         "        except ServiceUnavailable as exception:\n",
@@ -164,26 +164,26 @@
         "                query=query, exception=exception))\n",
         "            raise\n",
         "\n",
-        "    def find_person(self, person_name):\n",
+        "    def find_person(self, actor_name):\n",
         "        with self.driver.session() as session:\n",
-        "            result = session.read_transaction(self._find_and_return_person, person_name)\n",
+        "            result = session.read_transaction(self._find_and_return_person, actor_name)\n",
         "            for row in result:\n",
-        "                print(\"Found person: {row}\".format(row=row))\n",
+        "                print(\"Found actor: {row}\".format(row=row))\n",
         "\n",
         "    @staticmethod\n",
-        "    def _find_and_return_person(tx, person_name):\n",
+        "    def _find_and_return_person(tx, actor_name):\n",
         "        query = (\n",
-        "            \"MATCH (p:Person) \"\n",
-        "            \"WHERE p.name = $person_name \"\n",
-        "            \"RETURN p.name AS name\"\n",
+        "            \"MATCH (n:actor) \"\n",
+        "            \"WHERE n.name = $actor_name \"\n",
+        "            \"RETURN n.name AS name\"\n",
         "        )\n",
-        "        result = tx.run(query, person_name=person_name)\n",
+        "        result = tx.run(query, actor_name=actor_name)\n",
         "        return [row[\"name\"] for row in result]"
       ],
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -201,10 +201,9 @@
         "# Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
         "uri = \"neo4j+s://a4270446.databases.neo4j.io\"\n",
         "user = \"neo4j\"\n",
-        "password = \"here-take-my-passwd\"\n",
+        "#password = \"here-take-my-passwd\"\n",
         "app = App(uri, user, password)\n",
-        "app.create_friendship(\"Alice\", \"David\")\n",
-        "app.find_person(\"Alice\")\n",
+        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n",
         "app.close()"
       ],
       "metadata": {
@@ -212,17 +211,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6p2nMvmodNw4",
-        "outputId": "7eb4cdc5-3e45-4f98-d892-7240979c6a3d"
+        "outputId": "4650171c-bb0b-4bbd-9fe8-16fc6ab0b990"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Created friendship between: Alice, David\n",
-            "Found person: Alice\n",
-            "Found person: Alice\n"
+            "Created friendship between: Experimentation Controller, Sandbox\n"
           ]
         }
       ]
