--- a/Build-a-thon-2022/build_a_thon_graph_v1.ipynb
+++ b/Build-a-thon-2022/build_a_thon_graph_v1.ipynb
@@ -6,7 +6,7 @@
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMx87HldW/lE1ciCYT4N3rH",
+      "authorship_tag": "ABX9TyM0m0MkY2iCtqBddm1XXaXP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,13 +60,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hKFE_mBLcWJL",
-        "outputId": "f1236a23-3eff-43cf-b4fe-50fe764d46d4"
+        "outputId": "f5b31cec-8e77-4233-9f04-a7b1a0f29a9e"
       },
       "outputs": [
         {
@@ -75,11 +75,11 @@
           "text": [
             "Collecting neo4j\n",
             "  Downloading neo4j-4.4.2.tar.gz (89 kB)\n",
-            "\u001b[?25l\r\u001b[K     |███▋                            | 10 kB 22.5 MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 20 kB 12.8 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 30 kB 9.5 MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 40 kB 8.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 51 kB 4.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 61 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 71 kB 5.5 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 81 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 89 kB 3.9 MB/s \n",
+            "\u001b[?25l\r\u001b[K     |███▋                            | 10 kB 17.0 MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 20 kB 22.8 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 30 kB 17.0 MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 40 kB 8.2 MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 51 kB 6.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 61 kB 7.5 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 71 kB 8.5 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 81 kB 8.6 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 89 kB 4.9 MB/s \n",
             "\u001b[?25hRequirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from neo4j) (2018.9)\n",
             "Building wheels for collected packages: neo4j\n",
             "  Building wheel for neo4j (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for neo4j: filename=neo4j-4.4.2-py3-none-any.whl size=115365 sha256=a5f9aa53c6fb70b9a54b813953a627820e3a3c16d6dc17fb25482d7defe20325\n",
+            "  Created wheel for neo4j: filename=neo4j-4.4.2-py3-none-any.whl size=115365 sha256=3dadc90feaef0be43e4f66be7b0f729490d2a159bd01ae53379b4c9326283143\n",
             "  Stored in directory: /root/.cache/pip/wheels/10/d6/28/95029d7f69690dbc3b93e4933197357987de34fbd44b50a0e4\n",
             "Successfully built neo4j\n",
             "Installing collected packages: neo4j\n",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -164,16 +164,16 @@
         "                query=query, exception=exception))\n",
         "            raise\n",
         "\n",
-        "    def find_person(self, actor_name):\n",
+        "    def find_actor(self, actor_name):\n",
         "        with self.driver.session() as session:\n",
-        "            result = session.read_transaction(self._find_and_return_person, actor_name)\n",
+        "            result = session.read_transaction(self._find_and_return_actor, actor_name)\n",
         "            for row in result:\n",
         "                print(\"Found actor: {row}\".format(row=row))\n",
         "\n",
         "    @staticmethod\n",
-        "    def _find_and_return_person(tx, actor_name):\n",
+        "    def _find_and_return_actor(tx, actor_name):\n",
         "        query = (\n",
-        "            \"MATCH (n:actor) \"\n",
+        "            \"MATCH (n:Actor) \"\n",
         "            \"WHERE n.name = $actor_name \"\n",
         "            \"RETURN n.name AS name\"\n",
         "        )\n",
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -201,28 +201,86 @@
         "# Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
         "uri = \"neo4j+s://a4270446.databases.neo4j.io\"\n",
         "user = \"neo4j\"\n",
-        "#password = \"here-take-my-passwd\"\n",
-        "app = App(uri, user, password)\n",
-        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n",
-        "app.close()"
+        "password = \"secret\"\n",
+        "app = App(uri, user, password)"
+      ],
+      "metadata": {
+        "id": "6p2nMvmodNw4"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step-5: Create relations"
+      ],
+      "metadata": {
+        "id": "v_PlujdPvtcN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n"
+      ],
+      "metadata": {
+        "id": "aiKGLHItvp2g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step-6: Query actors"
+      ],
+      "metadata": {
+        "id": "5VEb2wKlwakG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.find_actor(\"Experimentation Controller\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "6p2nMvmodNw4",
-        "outputId": "4650171c-bb0b-4bbd-9fe8-16fc6ab0b990"
+        "id": "QXv630w8wdEc",
+        "outputId": "698d0962-200a-46d8-8e61-6928423579b5"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Created friendship between: Experimentation Controller, Sandbox\n"
+            "Found actor: Experimentation Controller\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step-6: Close the database connection"
+      ],
+      "metadata": {
+        "id": "eBr7q13XvyeB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.close()"
+      ],
+      "metadata": {
+        "id": "J2ak5OTtvrLd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
