--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "build-a-thon-graph-v1.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0m0MkY2iCtqBddm1XXaXP",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/vrra/Students-mentoring-2022/blob/main/Build-a-thon-2022/build_a_thon_graph_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,33 +12,33 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xvVYTJnpc8NW"
+      },
       "source": [
         "Created: 14 Apr 2022.   \n",
         "Contact: Vishnu Ram OV.   \n",
         "vishnu.n@ieee.org.   \n",
         "Licence: available for all purposes under the sun\n"
-      ],
-      "metadata": {
-        "id": "xvVYTJnpc8NW"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Refer: https://neo4j.com/docs/aura/auradb/getting-started/create-database/"
-      ],
       "metadata": {
         "id": "TOxLkcQAfFsO"
-      }
+      },
+      "source": [
+        "Refer: https://neo4j.com/docs/aura/auradb/getting-started/create-database/"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "step-1: install neo4j"
-      ],
       "metadata": {
         "id": "Seq4Lm-HdDJY"
-      }
+      },
+      "source": [
+        "step-1: install neo4j"
+      ]
     },
     {
       "cell_type": "code",
@@ -70,20 +52,22 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting neo4j\n",
-            "  Downloading neo4j-4.4.2.tar.gz (89 kB)\n",
-            "\u001b[?25l\r\u001b[K     |███▋                            | 10 kB 17.0 MB/s eta 0:00:01\r\u001b[K     |███████▎                        | 20 kB 22.8 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 30 kB 17.0 MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 40 kB 8.2 MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 51 kB 6.4 MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 61 kB 7.5 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 71 kB 8.5 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▎  | 81 kB 8.6 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 89 kB 4.9 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from neo4j) (2018.9)\n",
+            "  Downloading neo4j-4.4.3.tar.gz (90 kB)\n",
+            "     |████████████████████████████████| 90 kB 81 kB/s             \n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25hRequirement already satisfied: pytz in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38/lib/python3.8/site-packages (from neo4j) (2021.3)\n",
             "Building wheels for collected packages: neo4j\n",
-            "  Building wheel for neo4j (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for neo4j: filename=neo4j-4.4.2-py3-none-any.whl size=115365 sha256=3dadc90feaef0be43e4f66be7b0f729490d2a159bd01ae53379b4c9326283143\n",
-            "  Stored in directory: /root/.cache/pip/wheels/10/d6/28/95029d7f69690dbc3b93e4933197357987de34fbd44b50a0e4\n",
+            "  Building wheel for neo4j (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for neo4j: filename=neo4j-4.4.3-py3-none-any.whl size=116070 sha256=fa1f755066cfb694f856d5d17faab014c731b8262f4373f12476c0c1ecb7711d\n",
+            "  Stored in directory: /Users/vishnu/Library/Caches/pip/wheels/90/fd/09/1de626b67971e1769f5e1f09c532f6a7117cc1b12c58d41601\n",
             "Successfully built neo4j\n",
             "Installing collected packages: neo4j\n",
-            "Successfully installed neo4j-4.4.2\n"
+            "Successfully installed neo4j-4.4.3\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
@@ -93,37 +77,42 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "step-2: imports"
-      ],
       "metadata": {
         "id": "P49wR7FPejI6"
-      }
+      },
+      "source": [
+        "step-2: imports"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "CMXk5yZcd-Jt"
+      },
+      "outputs": [],
       "source": [
         "from neo4j import GraphDatabase\n",
         "import logging\n",
         "from neo4j.exceptions import ServiceUnavailable"
-      ],
-      "metadata": {
-        "id": "CMXk5yZcd-Jt"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "step-3: define helper class"
-      ],
       "metadata": {
         "id": "QJsfeO0Ve03C"
-      }
+      },
+      "source": [
+        "step-3: define helper class"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "FccBUxEIeKf_"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -179,71 +168,72 @@
         "        )\n",
         "        result = tx.run(query, actor_name=actor_name)\n",
         "        return [row[\"name\"] for row in result]"
-      ],
-      "metadata": {
-        "id": "FccBUxEIeKf_"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "step-4: connect to DB"
-      ],
       "metadata": {
         "id": "Pjilh9vPe4LY"
-      }
+      },
+      "source": [
+        "step-4: connect to DB"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "6p2nMvmodNw4"
+      },
+      "outputs": [],
       "source": [
         "# Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
         "uri = \"neo4j+s://a4270446.databases.neo4j.io\"\n",
         "user = \"neo4j\"\n",
-        "password = \"secret\"\n",
+        "password = \"Pn8T12EjCxRLRfaHClsJIaCFAdWcER4pEeIp4dRKyzg\"\n",
         "app = App(uri, user, password)"
-      ],
-      "metadata": {
-        "id": "6p2nMvmodNw4"
-      },
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Step-5: Create relations"
-      ],
       "metadata": {
         "id": "v_PlujdPvtcN"
-      }
+      },
+      "source": [
+        "Step-5: Create relations"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n"
-      ],
+      "execution_count": 9,
       "metadata": {
         "id": "aiKGLHItvp2g"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created friendship between: Experimentation Controller, Sandbox\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Step-6: Query actors"
-      ],
       "metadata": {
         "id": "5VEb2wKlwakG"
-      }
+      },
+      "source": [
+        "Step-6: Query actors"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "app.find_actor(\"Experimentation Controller\")"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,36 +241,65 @@
         "id": "QXv630w8wdEc",
         "outputId": "698d0962-200a-46d8-8e61-6928423579b5"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Found actor: Experimentation Controller\n"
           ]
         }
+      ],
+      "source": [
+        "app.find_actor(\"Experimentation Controller\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Step-6: Close the database connection"
-      ],
       "metadata": {
         "id": "eBr7q13XvyeB"
-      }
+      },
+      "source": [
+        "Step-6: Close the database connection"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "app.close()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "J2ak5OTtvrLd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "app.close()"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyM0m0MkY2iCtqBddm1XXaXP",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "build-a-thon-graph-v1.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
