--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -190,7 +190,7 @@
         "# Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
         "uri = \"neo4j+s://a4270446.databases.neo4j.io\"\n",
         "user = \"neo4j\"\n",
-        "password = \"Pn8T12EjCxRLRfaHClsJIaCFAdWcER4pEeIp4dRKyzg\"\n",
+        "password = \"secret\"\n",
         "app = App(uri, user, password)"
       ]
     },
@@ -283,8 +283,12 @@
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "59112f1abec8676be8d8e5b557dd5f2474aba6f718d70c26d8ed3f852164eaa0"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.12 ('myenv38')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
