--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vrra/Students-mentoring-2022/blob/main/Build-a-thon-2022/build_a_thon_graph_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vrra/FGAN-Build-a-thon-2022/blob/main/Notebooks2022/build_a_thon_graph_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -48,26 +48,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hKFE_mBLcWJL",
-        "outputId": "f5b31cec-8e77-4233-9f04-a7b1a0f29a9e"
+        "outputId": "ed3858a8-9eb2-466a-b1f2-ce5461cbb40a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting neo4j\n",
             "  Downloading neo4j-4.4.3.tar.gz (90 kB)\n",
-            "     |████████████████████████████████| 90 kB 81 kB/s             \n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-            "\u001b[?25hRequirement already satisfied: pytz in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38/lib/python3.8/site-packages (from neo4j) (2021.3)\n",
+            "\u001b[K     |████████████████████████████████| 90 kB 3.8 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from neo4j) (2022.1)\n",
             "Building wheels for collected packages: neo4j\n",
-            "  Building wheel for neo4j (setup.py) ... \u001b[?25ldone\n",
-            "\u001b[?25h  Created wheel for neo4j: filename=neo4j-4.4.3-py3-none-any.whl size=116070 sha256=fa1f755066cfb694f856d5d17faab014c731b8262f4373f12476c0c1ecb7711d\n",
-            "  Stored in directory: /Users/vishnu/Library/Caches/pip/wheels/90/fd/09/1de626b67971e1769f5e1f09c532f6a7117cc1b12c58d41601\n",
+            "  Building wheel for neo4j (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for neo4j: filename=neo4j-4.4.3-py3-none-any.whl size=116069 sha256=8f86de972ec6a9d0c6ad174f3f5a9b557eb4b0e8a4e62594b51c6a6448df50df\n",
+            "  Stored in directory: /root/.cache/pip/wheels/db/dd/76/acacd519878f133f2f869aec70db548d89e04013209c3c62bc\n",
             "Successfully built neo4j\n",
             "Installing collected packages: neo4j\n",
-            "Successfully installed neo4j-4.4.3\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "Successfully installed neo4j-4.4.3\n"
           ]
         }
       ],
@@ -108,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 20,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -125,22 +124,31 @@
         "        # Don't forget to close the driver connection when you are finished with it\n",
         "        self.driver.close()\n",
         "\n",
-        "    def create_friendship(self, actor1_name, actor2_name):\n",
+        "    #Vishnu: 1 Jun 2022: added relationships names\n",
+        "    #Vishnu: CAUTION: side-effect: this f() creates the nodes\n",
+        "    def create_nodes_with_friendship(self, actor1_name, actor2_name, rel_name):\n",
         "        with self.driver.session() as session:\n",
         "            # Write transactions allow the driver to handle retries and transient errors\n",
         "            result = session.write_transaction(\n",
-        "                self._create_and_return_friendship, actor1_name, actor2_name)\n",
+        "                self._create_and_return_friendship, actor1_name, actor2_name, rel_name)\n",
         "            for row in result:\n",
         "                print(\"Created friendship between: {n1}, {n2}\".format(n1=row['n1'], n2=row['n2']))\n",
+        "    \n",
+        "    #Vishnu: 1 Jun 2022: added relationships names\n",
+        "    #Vishnu: CAUTION: side-effect: this f() creates the nodes\n",
+        "    #NOTE: we use labels and properties for nodes\n",
+        "    #NOTE: we use relationtypes only \n",
+        "    #TBD - to search for existing nodes and reuse them.\n",
+        "    #TBD - add properties to relationships\n",
         "\n",
         "    @staticmethod\n",
-        "    def _create_and_return_friendship(tx, actor1_name, actor2_name):\n",
+        "    def _create_and_return_friendship(tx, actor1_name, actor2_name, rel_name):\n",
         "        # To learn more about the Cypher syntax, see https://neo4j.com/docs/cypher-manual/current/\n",
         "        # The Reference Card is also a good resource for keywords https://neo4j.com/docs/cypher-refcard/current/\n",
         "        query = (\n",
         "            \"CREATE (n1:Actor { name: $actor1_name }) \"\n",
         "            \"CREATE (n2:Actor { name: $actor2_name }) \"\n",
-        "            \"CREATE (n1)-[:USECAP]->(n2) \"\n",
+        "            \"CREATE (n1)-[:\" + rel_name + \"]->(n2) \"\n",
         "            \"RETURN n1, n2\"\n",
         "        )\n",
         "        result = tx.run(query, actor1_name=actor1_name, actor2_name=actor2_name)\n",
@@ -153,20 +161,21 @@
         "                query=query, exception=exception))\n",
         "            raise\n",
         "\n",
-        "    def find_actor(self, actor_name):\n",
+        "    def find_all_actors(self):\n",
         "        with self.driver.session() as session:\n",
-        "            result = session.read_transaction(self._find_and_return_actor, actor_name)\n",
+        "            result = session.read_transaction(self._find_and_return_all_actors)\n",
+        "            i=0\n",
         "            for row in result:\n",
-        "                print(\"Found actor: {row}\".format(row=row))\n",
+        "                i=i+1\n",
+        "                print(\"Found actor-\"+ str(i) +\": {row}\".format(row=row))\n",
         "\n",
         "    @staticmethod\n",
-        "    def _find_and_return_actor(tx, actor_name):\n",
+        "    def _find_and_return_all_actors(tx):\n",
         "        query = (\n",
         "            \"MATCH (n:Actor) \"\n",
-        "            \"WHERE n.name = $actor_name \"\n",
         "            \"RETURN n.name AS name\"\n",
         "        )\n",
-        "        result = tx.run(query, actor_name=actor_name)\n",
+        "        result = tx.run(query)\n",
         "        return [row[\"name\"] for row in result]"
       ]
     },
@@ -181,16 +190,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 21,
       "metadata": {
         "id": "6p2nMvmodNw4"
       },
       "outputs": [],
       "source": [
-        "# Aura queries use an encrypted connection using the \"neo4j+s\" URI scheme\n",
+        "#Vishnu: 1 Jun 2022: use the details from https://console.neo4j.io\n",
+        "#especially use your own DB instance and corresponding passwd.\n",
+        "\n",
         "uri = \"neo4j+s://a4270446.databases.neo4j.io\"\n",
         "user = \"neo4j\"\n",
         "password = \"secret\"\n",
+        "\n",
         "app = App(uri, user, password)"
       ]
     },
@@ -200,26 +212,30 @@
         "id": "v_PlujdPvtcN"
       },
       "source": [
-        "Step-5: Create relations"
+        "Step-5: Create nodes and relations"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 25,
       "metadata": {
-        "id": "aiKGLHItvp2g"
+        "id": "aiKGLHItvp2g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1e195109-d3ea-4790-c2c6-5fbefa287e7a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Created friendship between: Experimentation Controller, Sandbox\n"
           ]
         }
       ],
       "source": [
-        "app.create_friendship(\"Experimentation Controller\", \"Sandbox\")\n"
+        "app.create_nodes_with_friendship(\"Experimentation Controller\", \"Sandbox\", \"my_best_buddy\")\n"
       ]
     },
     {
@@ -228,30 +244,31 @@
         "id": "5VEb2wKlwakG"
       },
       "source": [
-        "Step-6: Query actors"
+        "Step-6: Find all actors"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXv630w8wdEc",
-        "outputId": "698d0962-200a-46d8-8e61-6928423579b5"
+        "outputId": "2804923d-04dd-492a-f49f-819ad398b828"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Found actor: Experimentation Controller\n"
+            "Found actor-1: Experimentation Controller\n",
+            "Found actor-2: Sandbox\n"
           ]
         }
       ],
       "source": [
-        "app.find_actor(\"Experimentation Controller\")"
+        "app.find_all_actors()"
       ]
     },
     {
@@ -265,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "J2ak5OTtvrLd"
       },
@@ -277,11 +294,11 @@
   ],
   "metadata": {
     "colab": {
-      "authorship_tag": "ABX9TyM0m0MkY2iCtqBddm1XXaXP",
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "build-a-thon-graph-v1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOTk2UMT7/+JmPd9r1JZT5d",
+      "include_colab_link": true
     },
     "interpreter": {
       "hash": "59112f1abec8676be8d8e5b557dd5f2474aba6f718d70c26d8ed3f852164eaa0"
