--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -335,11 +335,11 @@
         "app.create_rel_with_type_existing_nodes(\"my_best_buddy\", \"Experimentation Controller\", \"Sandbox\")\n"
       ],
       "metadata": {
-        "id": "9FZGjCA0DmXT",
-        "outputId": "9208b9f4-dd89-4293-f850-fca9633c538f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9FZGjCA0DmXT",
+        "outputId": "9208b9f4-dd89-4293-f850-fca9633c538f"
       },
       "execution_count": 132,
       "outputs": [
@@ -367,11 +367,11 @@
         "app.add_label_existing_node(\"Experimentation Controller\", \"usecase_002\")"
       ],
       "metadata": {
-        "id": "EZjZmOquOxK2",
-        "outputId": "3b963641-2efb-4525-f831-82ff0c43098e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EZjZmOquOxK2",
+        "outputId": "3b963641-2efb-4525-f831-82ff0c43098e"
       },
       "execution_count": 133,
       "outputs": [
@@ -423,11 +423,11 @@
         "app.find_all_usecase_actors(\"usecase_002\")"
       ],
       "metadata": {
-        "id": "XjfqC7ywQK4x",
-        "outputId": "4fc5c798-122d-4df5-ce67-c0226866001d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XjfqC7ywQK4x",
+        "outputId": "4fc5c798-122d-4df5-ce67-c0226866001d"
       },
       "execution_count": 135,
       "outputs": [
@@ -475,11 +475,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "g3-zNw1qR--U",
-        "outputId": "c4e80d13-5702-42c9-97c4-e9a17ef57e2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g3-zNw1qR--U",
+        "outputId": "c4e80d13-5702-42c9-97c4-e9a17ef57e2d"
       },
       "execution_count": 137,
       "outputs": [
@@ -511,13 +511,49 @@
         "app.create_rel_with_type_existing_nodes(\"optimizes\", \"Knowledge Base Manager\", \"Knowledge Base\")\n",
         "app.create_rel_with_type_existing_nodes(\"export\", \"Knowledge Base Manager\", \"Knowledge Base\")\n",
         "\n",
+        "app.create_rel_with_type_existing_nodes(\"refer\", \"AN Orchestrator\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"input\", \"AN Orchestrator\", \"Use case description\")\n",
+        "app.create_rel_with_type_existing_nodes(\"output\", \"AN Orchestrator\", \"TOSCA format\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"refer\", \"Auto controller generator\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"output\", \"Auto controller generator\", \"TOSCA format\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"stores\", \"controller repository\", \"controllers\")\n",
+        "app.create_rel_with_type_existing_nodes(\"recommends\", \"ML model\", \"controllers\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"input\", \"Human operator\", \"reports\")\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "w6w8dt-QUUX8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w6w8dt-QUUX8",
+        "outputId": "96e64eb5-3db2-4110-ca69-bba478662fc8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created relation between: Knowledge Base, Knowledge Base\n",
+            "Created relation between: Knowledge Base, Knowledge Base\n",
+            "Created relation between: Knowledge Base Manager, Knowledge Base\n",
+            "Created relation between: Knowledge Base Manager, Knowledge Base\n",
+            "Created relation between: AN Orchestrator, Knowledge Base\n",
+            "Created relation between: AN Orchestrator, Use case description\n",
+            "Created relation between: AN Orchestrator, TOSCA format\n",
+            "Created relation between: Auto controller generator, Knowledge Base\n",
+            "Created relation between: Auto controller generator, TOSCA format\n",
+            "Created relation between: controller repository, controllers\n",
+            "Created relation between: ML model, controllers\n",
+            "Created relation between: Human operator, reports\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -530,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 139,
       "metadata": {
         "id": "J2ak5OTtvrLd"
       },
@@ -545,7 +581,7 @@
       "collapsed_sections": [],
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6XOWdmSZuaKp+rrLNTX3e",
+      "authorship_tag": "ABX9TyM7+l9YRXtytPgpOglHSXMq",
       "include_colab_link": true
     },
     "interpreter": {
